# My-First-ML-Pipeline

./: .gitignore  Makefile  README.md  eda.py  export_model.py  index.html  modeling.py  prep_dataset.py  pyproject.toml  simple_model.py
